# DustyDirDetector

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  inactive_dir.rs  main.rs
